<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="IN" Id="{c44d48c9-f66f-4539-acb1-5e7a1a17ef6b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	BOX_IN 		AT%I*: 		ARRAY[1..8] OF BOOL;

	

	EthercatDevState 	AT%I*: UINT;

	Term2DevState 		AT%I*: UINT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>